--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Jorge García-Arcicollar - fullstack developer CV</title>
   <meta content="Curriculum y página personal de jorge-garcia-arcicollar" name="description">
   <meta content="Curriculum, desarrollador, Freelancer, java, programador, opentowork, cv, software, developer" name="keywords">
+  <meta name="theme-color" content="#000" />
 
   <!-- Favicons -->
   <link href="assets/img/codingBG1.png" rel="icon">
