--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
               <br>
                <p>Elaborar, enviar, recepcionar y archivar documentación.</p>
             </div>
-
-            <h3 class="resume-title">Licencias, certificaciones y cursos</h3>
+<br>
+            <h3 class="resume-title">Certificaciones y cursos</h3>
               <div class="resume-item">
                 <h4>Cambridge C1 Advanced Certificate</h4> 
                   <h5><em>Escuela oficial de Idiomas. </em></h5> 
@@ -225,8 +225,8 @@
               </div>
           </div>
 
-
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <br>
             <h3 class="resume-title">Formación Académica</h3>
             <div class="resume-item">
               <h4>Máster en ciberseguridad </h4> 
@@ -274,13 +274,9 @@
                 <h5><em>Lemont High School, Chicago Illinois </em></h5> 
                 <u><p>Enero 2022 - Junio 2022</p></u>
                <br>
-                 <ul>
-                   <li><p>Cybersecurity Fundamentals.</p></li>
-                   <li><p>Digital Forensic Analysis.</p></li>
-                   <li><p>Risk management.</p></li>
-                 <ul>
+                <p>Estudiante de intercambio durante el bachilleraro en Chicago, EEUU</p>
               </div>   
-
+<br>
               <h3 class="resume-title">Voluntariado</h3>
               <div class="resume-item">
                 <h4>Desarrollador web</h4> 
@@ -689,7 +685,7 @@
                 <p>jorgearcicollar𖦹hotmail.es</p>
               </div>
 
-              <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=madrid&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">google map embed code</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:600px;width:320px;}</style></div></div></div> 
+              <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=madrid&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><style>.gmap_canvas {overflow:hidden;background:none!important;height:600px;width:320px;}</style></div></div></div> 
 
           </div>
 
