--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Web:</strong> <a href="https://jorgearcicollar.github.io/"><span>jorgearcicollar.github.io</span></a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Madrid, España</span></li>
                 </ul>
               </div>
