--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Educación:</strong> <span>Máster</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>e-mail:</strong> <span>jorgearcicollar@hotmail.es</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>linkedIn:</strong> <a href="https://www.linkedin.com/in/jorge-garcia-arcicollar/"> <span>linkedin/jorge</span></a></li>
                 </ul>
               </div>
             </div>
@@ -237,7 +237,6 @@
                  <li><p>Ciberinteligencia.</p></li>
                  <li><p>Sistem Information Events Manager (SIEM).</p></li>
                  <li><p>Desarrollo seguro.</p></li>
-                 <li><p>Administración de sistemas Windows y Linux.</p></li>
                  <li><p>Hacking ético.</p></li>
                  <li><p>Seguridad en entornos móviles.</p></li>
                  <li><p>Análisis Forense digital.</p></li>
@@ -390,7 +389,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="813000" data-purecounter-duration="4" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="883600" data-purecounter-duration="4" class="purecounter"></span>
               <p><strong>Capturas</strong><br> Fotos tomadas con mis filtros</p>
             </div>
           </div>
@@ -398,7 +397,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="8100000" data-purecounter-duration="5" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="9000000" data-purecounter-duration="5" class="purecounter"></span>
               <p><strong>Personas alcanzadas</strong><br>Personas que han visto una foto con mi filtro</p>
             </div>
           </div>
@@ -678,44 +677,9 @@
                 <h4>linkedin:</h4>
                 <p><a href="https://www.linkedin.com/in/jorge-garcia-arcicollar/">Jorge Garcia-Arcicollar</p>
               </div>
-
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>jorgearcicollar𖦹hotmail.es</p>
-              </div>
-
               <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=madrid&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><style>.gmap_canvas {overflow:hidden;background:none!important;height:600px;width:320px;}</style></div></div></div> 
-
           </div>
-
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form negro">
-              <div class="row">
-              <div class="form-group">
-                <label class="white" for="name">Asunto</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
-              </div>
-              <div class="form-group">
-                <label class="white" for="name">Mensaje</label>
-                <textarea id="message"class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="text-center"><button onclick="enviarMsg();">Enviar</button></div>
-            </form>
-          </div>
-
-          <script>
-            function enviarMsg(){
-              subject=document.getElementById("subject").value;
-              message=document.getElementById("message").value;
-              subject==subject.replace(" ", "%20");
-              message= message.replace(" ", "%20");
-              javascrip:window.location="mailto:jorgearcicollar@hotmail.com?subject="+subject+"&body="+message;
-            }
-          </script>
-
         </div>
-
       </div>
     </section><!-- End Contact Section -->
 
