--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Jorge García-Arcicollar - fullstack developer CV</title>
+  <title>Jorge García-Arcicollar - Fullstack developer CV</title>
   <meta content="Curriculum y página personal de jorge-garcia-arcicollar" name="description">
   <meta content="Curriculum, desarrollador, Freelancer, java, programador, opentowork, cv, software, developer" name="keywords">
   <meta name="theme-color" content="#000" />
