--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=0" name="viewport">
 
-  <title>Jorge García-Arcicollar - Fullstack developer CV</title>
+  <title>Jorge García-Arcicollar - Cybersecurity Analyst - CV</title>
   <meta content="Curriculum y página personal de jorge-garcia-arcicollar" name="description">
-  <meta content="Curriculum, desarrollador, Freelancer, java, programador, opentowork, cv, software, developer" name="keywords">
-  <meta name="theme-color" content="#000" />
+  <meta content="Curriculum, Cybersecurity,  desarrollador, Freelancer, java, programador, opentowork, cv, software, developer" name="keywords">
+  <meta name="theme-color" content="#549FB0" />
 
   <!-- Favicons -->
   <link href="assets/img/codingBG1.png" rel="icon">
@@ -206,7 +206,7 @@
               <br>
                <p>Elaborar, enviar, recepcionar y archivar documentación.</p>
             </div>
-<br>
+
             <h3 class="resume-title">Certificaciones y cursos</h3>
               <div class="resume-item">
                 <h4>Cambridge C1 Advanced Certificate</h4> 
@@ -226,7 +226,6 @@
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <br>
             <h3 class="resume-title">Formación Académica</h3>
             <div class="resume-item">
               <h4>Máster en ciberseguridad </h4> 
@@ -234,14 +233,41 @@
               <u><p>noviembre 2022 - Junio 2023</p></u>
               <br>
                 <ul>
-                 <li><p>Ciberinteligencia.</p></li>
-                 <li><p>Sistem Information Events Manager (SIEM).</p></li>
+                <li><p>Ciberinteligencia.</p>
+                  <ul><li><p class="minip">Análisis de capturas de tráfico de red con Wireshark. </p> </li></ul>
+                  <ul><li><p class="minip">Análisis de Cabeceras de correo. </p></li> </ul>
+                </li>
+                 <li><p>Sistem Information Events Manager (SIEM).</p>
+                  <ul><li><p class="minip">Microsoft Azure Sentinel </p> </li></ul>
+                  <ul><li><p class="minip">Qradar </p></li> </ul>
+                  <ul><li><p class="minip">Splunk </p></li> </ul>
+                </li>
                  <li><p>Desarrollo seguro.</p></li>
                  <li><p>Hacking ético.</p></li>
                  <li><p>Seguridad en entornos móviles.</p></li>
                  <li><p>Análisis Forense digital.</p></li>
                  <li><p>Ingeniería inversa.</p></li>
                 <ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>Ethical Hacking Essentials | EHE Cerfification</h4> 
+                <h5><em>EC Council - Codered </em></h5> 
+                <u><p>Octubre 2022 - Diciembre 2022</p></u>
+               <br>
+                 <p>Ataques y contramedidas ante amenazas de ingeniería social y hacia aplicaciones web, entornos inalámbricos, cloud y dispositivos móviles. </p>
+            </div>
+
+            <div class="resume-item">
+              <h4>Cibersecurity Fundamentals</h4> 
+                <h5><em>edX online - Rochester Institute of technology </em></h5> 
+                <u><p>Enero 2022 - Junio 2022</p></u>
+               <br>
+                 <ul>
+                   <li><p>Cybersecurity Fundamentals.</p></li>
+                   <li><p>Digital Forensic Analysis.</p></li>
+                   <li><p>Risk management.</p></li>
+                 <ul>
             </div>
 
             <div class="resume-item">
@@ -258,20 +284,9 @@
             </div>
 
             <div class="resume-item">
-              <h4>Cibersecurity Fundamentals</h4> 
-                <h5><em>edX online - Rochester Institute of technology </em></h5> 
-                <u><p>Enero 2022 - Junio 2022</p></u>
-               <br>
-                 <ul>
-                   <li><p>Cybersecurity Fundamentals.</p></li>
-                   <li><p>Digital Forensic Analysis.</p></li>
-                   <li><p>Risk management.</p></li>
-                 <ul>
-            </div>
-            <div class="resume-item">
               <h4>Junior degree</h4> 
                 <h5><em>Lemont High School, Chicago Illinois </em></h5> 
-                <u><p>Enero 2022 - Junio 2022</p></u>
+                <u><p>Septiembre 2016 - Junio 2017</p></u>
                <br>
                 <p>Estudiante de intercambio durante el bachilleraro en Chicago, EEUU</p>
               </div>   
