--- a/index.html
+++ b/index.html
@@ -171,7 +171,6 @@
                 <h4>Analista Programador | Desarrollador fullstack</h4> 
                   <h5><em>Analistas Financieros Internacionales AFI - Madrid</em></h5> 
                   <u><p>Abril 2021 - Actualidad</p></u>
-                  <br>
                   <p>Analista Programador Junior Full Stack en el departamento de Servicios Tecnológicos Avanzados.</p>
                    <br>
                    <ul>
@@ -184,7 +183,6 @@
                    </ul>
 
                     <p><b>Tecnologías usadas:</b></p>
-                    <br>
                     <ul>
                       <li><p>FrontEnd: HTML, CSS, JavaScript, jQuery, AJAX.</p></li>
                       <li><p>BackEnd: Java, SQL, Python, Spring.</p></li>
@@ -196,21 +194,20 @@
               <h4>Summer camp Counselor</h4> 
                 <h5><em>Vaughan Group - Madrid</em></h5> 
                 <u><p>Verano 2019</p></u>
-                <br>
+
                   <p>Monitor de ocio y tiempo libre en campamentos bilingües en Inglés durante el verano.</p>
             </div>
             <div class="resume-item">
               <h4>Asistente de dirección</h4> 
               <h5><em>Deleytax auditores - Madrid</em></h5> 
               <u><p>Octubre 2018 - Abril 2019</p></u>
-              <br>
                <p>Elaborar, enviar, recepcionar y archivar documentación.</p>
             </div>
 
             <h3 class="resume-title">Certificaciones y cursos</h3>
               <div class="resume-item">
                 <h4>Cambridge C1 Advanced Certificate</h4> 
-                  <h5><em>Escuela oficial de Idiomas. </em></h5> 
+                  <h5><em>Escuela oficial de Idiomas. Speaking and listening nota de C2 Proficiency. </em></h5> 
                   <u><p>Abril 2021</p></u>
               </div>
               <div class="resume-item">
@@ -237,7 +234,7 @@
                   <ul><li><p class="minip">Análisis de capturas de tráfico de red con Wireshark. </p> </li></ul>
                   <ul><li><p class="minip">Análisis de Cabeceras de correo. </p></li> </ul>
                 </li>
-                 <li><p>Sistem Information Events Manager (SIEM).</p>
+                 <li><p>System Information Events Manager (SIEM).</p>
                   <ul><li><p class="minip">Microsoft Azure Sentinel </p> </li></ul>
                   <ul><li><p class="minip">Qradar </p></li> </ul>
                   <ul><li><p class="minip">Splunk </p></li> </ul>
@@ -254,7 +251,6 @@
               <h4>Ethical Hacking Essentials | EHE Cerfification</h4> 
                 <h5><em>EC Council - Codered </em></h5> 
                 <u><p>Octubre 2022 - Diciembre 2022</p></u>
-               <br>
                  <p>Ataques y contramedidas ante amenazas de ingeniería social y hacia aplicaciones web, entornos inalámbricos, cloud y dispositivos móviles. </p>
             </div>
 
@@ -287,7 +283,6 @@
               <h4>Junior degree</h4> 
                 <h5><em>Lemont High School, Chicago Illinois </em></h5> 
                 <u><p>Septiembre 2016 - Junio 2017</p></u>
-               <br>
                 <p>Estudiante de intercambio durante el bachilleraro en Chicago, EEUU</p>
               </div>   
 <br>
