--- a/assets/index.html
+++ b/assets/index.html
@@ -238,15 +238,25 @@
                   <h5><em>Escuela oficial de Idiomas. </em></h5> 
                   <u><p>Abril 2021</p></u>
               </div>
+            <div class="resume-item">
+                <h4>ChatGPT Prompt engineering for developers.</h4> 
+                  <h5><em>Open AI, DeepLearning AI </em></h5> 
+                  <u><p>April 2023</p></u>
+              </div>
+            <div class="resume-item">
+                <h4>Data Visualization with Excel.</h4> 
+                  <h5><em>Udemy </em></h5> 
+                  <u><p>April 2023</p></u>
+              </div>
               <div class="resume-item">
                 <h4>Google Analytics for Beginners</h4> 
                   <h5><em>Google analytics Academy. </em></h5> 
-                  <u><p>Junio 2022</p></u>
+                  <u><p>June 2022</p></u>
               </div>
               <div class="resume-item">
                 <h4>Leading people and teams</h4> 
                   <h5><em>Coursera Online - Michigan University </em></h5> 
-                  <u><p>Enero 2022</p></u>
+                  <u><p>January 2022</p></u>
               </div>
           </div>
 
@@ -258,20 +268,41 @@
               <u><p>noviembre 2022 - Junio 2023</p></u>
               <br>
                 <ul>
-                <li><p>Ciberinteligencia.</p>
-                  <ul><li><p class="minip">Análisis de capturas de tráfico de red con Wireshark. </p> </li></ul>
-                  <ul><li><p class="minip">Análisis de Cabeceras de correo. </p></li> </ul>
+                <li><p>Cyber threat intelligence</p>
+                  <ul><li><p class="minip">Wireshark network traffic analysis </p> </li></ul>
+                  <ul><li><p class="minip">Phishing </p></li> </ul>
+                   <ul><li><p class="minip">OSINT</p></li> </ul>
                 </li>
                  <li><p>Sistem Information Events Manager (SIEM).</p>
                   <ul><li><p class="minip">Microsoft Azure Sentinel </p> </li></ul>
                   <ul><li><p class="minip">Qradar </p></li> </ul>
                   <ul><li><p class="minip">Splunk </p></li> </ul>
                 </li>
-                 <li><p>Desarrollo seguro.</p></li>
-                 <li><p>Hacking ético.</p></li>
-                 <li><p>Seguridad en entornos móviles.</p></li>
+                 <li><p>Secure Development</p>
+                    <ul><li><p class="minip">SSDLC </p> </li></ul>
+                    <ul><li><p class="minip">DevSecOps </p></li> </ul>
+                    <ul><li><p class="minip">Code analysis </p></li> </ul>
+                 </li>
+                 <li><p>Ethical Hacking</p>
+                    <ul><li><p class="minip">Metasploit </p> </li></ul>
+                    <ul><li><p class="minip">nmap </p></li> </ul>
+                    <ul><li><p class="minip">Kali Linux </p></li> </ul>
+                 </li>
+                 <li><p>Mobile security</p>
+                    <ul><li><p class="minip">Frida </p> </li></ul>
+                    <ul><li><p class="minip">.apk analysis </p></li> </ul>
+                 </li>
                  <li><p>Análisis Forense digital.</p></li>
+                    <ul><li><p class="minip">FTK imager </p> </li></ul>
+                    <ul><li><p class="minip">Autopsy </p></li> </ul>
+                    <ul><li><p class="minip">Volatility</p></li> </ul>
+                   <ul><li><p class="minip">Log, MFT, Usr>Jrnl analysis</p></li> </ul>
                  <li><p>Ingeniería inversa.</p></li>
+                     <ul><li><p class="minip">C++ </p> </li></ul>
+                      <ul><li><p class="minip">IDA </p></li> </ul>
+                      <ul><li><p class="minip">Debugger</p></li> </ul>
+                     <ul><li><p class="minip">PEstudio</p></li> </ul>
+                   <li><p>Thesis: Money Laundering using tiktok</p></li>
                 <ul>
             </div>
 
