--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=0.8, maximum-scale=0.9, user-scalable=0" name="viewport">
 
-  <title>Jorge García-Arcicollar - Cybersecurity Analyst - CV</title>
+  <title>Jorge García-Arcicollar | Cybersecurity Analyst - CV</title>
   <meta content="Curriculum y página personal de jorge-garcia-arcicollar" name="description">
   <meta content="Curriculum, Cybersecurity, ciberseguridad, dfir, ciberinteligencia, desarrollador, Freelancer, java, programador, opentowork, cv, software, developer" name="keywords">
   <meta name="theme-color" content="#549FB0" />
