--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Jorge García-Arcicollar - Cybersecurity Analyst - CV</title>
   <meta content="Curriculum y página personal de jorge-garcia-arcicollar" name="description">
-  <meta content="Curriculum, Cybersecurity,  desarrollador, Freelancer, java, programador, opentowork, cv, software, developer" name="keywords">
+  <meta content="Curriculum, Cybersecurity,  desarrollador, incident response, blue team, respuesta ante incidentes, incidentes de ciberseguridad, analista, analista de ciberseguridad, opentowork, cv, software, developer" name="keywords">
   <meta name="theme-color" content="#549FB0" />
 
   <!-- Favicons -->
