--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <section id="hero" class="d-flex flex-column  align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1 class="nombre">Jorge García-Arcicollar</h1>
-      <p>Soy <span class="typed" data-typed-items="analista programador, desarrollador de software, Oracle SQL DBA, fullstack developer, estudiante de ciberseguridad"></span></p>
+      <p> I'm a <span class="typed" data-typed-items="Cybersecurity analyst, incident responder, digital forensic investigator, IT consultant, cybersecurity master"></span></p>
     </div>
   </section><!-- End Hero -->
 
