--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1 class="nombre">Jorge García-Arcicollar</h1>
     <br>
-      <p><span class="typed" data-typed-items="Cybersecurity analyst, incident responder, digital forensic investigator, IT consultant, cybersecurity master"></span></p>
+      <p><span class="typed" data-typed-items="cybersecurity analyst, incident responder, social engineering attacks investigator, threat intelligence, security monitoring, digital forensic investigator, IT consultant, web security, vulnerability management, software developer, cybersecurity master"></span></p>
     </div>
   </section><!-- End Hero -->
 
