--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Sobre mi</h2>
-          <p>Apasionado de la tecnología. Titulado en desarrollo Web en modalidad bilingüe y actualmente cursando un Máster en ciberseguridad de UCJC x IMF x Deloitte con gran interés en Hacking ético, pentesting, tecnologías OSINT y análisis forense digital. </p>
+          <h2>About me</h2>
+          <p>Passionate about technology. Having completed a Master's in Cybersecurity from Universidad Camilo Jose Cela x Deloitte x IMF and holding a degree in Bilingual Web Development. I have a keen interest in incident response, threat intelligence, social engineering attacks and Artificial Intelligence </p>
         </div>
 
         <div class="row">
