--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <div class="section-title">
           <h2>About me</h2>
-          <p>Passionate about technology. Having completed a Master's in Cybersecurity from Universidad Camilo Jose Cela x Deloitte x IMF and holding a degree in Bilingual Web Development. I have a keen interest in incident response, threat intelligence, social engineering attacks and Artificial Intelligence </p>
+          <p>Passionate about technology. Having completed a Master's in Cybersecurity from Camilo Jose Cela University x Deloitte x IMF and holding a degree in Bilingual Web Development. I have a keen interest in incident response, threat intelligence, social engineering attacks and Artificial Intelligence </p>
         </div>
 
         <div class="row">
@@ -90,23 +90,23 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Analista programador / Futuro analista de ciberseguridad</h3>
+            <h3>Cybersecurity analyst</h3>
             <p class="fst-italic">
-              Técnico Superior en Desarrollo de Aplicaciones web bilingüe - IES Clara del Rey <br>
-              Máster en ciberseguridad - Universidad Camilo José Cela x IMF x Deloitte
+              Web Development - IES Clara del Rey<br>
+              Master's in Cybersecurity - Camilo José Cela University x IMF x Deloitte    
             </p>
             <br>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Web:</strong> <a href="https://jorgearcicollar.github.io/"><span>jorgearcicollar.github.io</span></a></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Madrid, España</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Madrid, España</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Educación:</strong> <span>Máster</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>linkedIn:</strong> <a href="https://www.linkedin.com/in/jorge-garcia-arcicollar/"> <span>linkedin/jorge</span></a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>Master</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/jorge-garcia-arcicollar/"> <span>linkedin/jorge</span></a></li>
                 </ul>
               </div>
             </div>
@@ -117,39 +117,40 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Experiencia</a></h4>
-            <p class="description">trabajando bajo presión</p>
-          </div>
-          <br>
-          <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <h4 class="title"><a href="">Experience</a></h4>
+            <p class="description">working under pressure</p>
+        </div>
+        <br>
+        <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Pensamiento</a></h4>
-            <p class="description">estrategico, proactividad, iniciativa, liderazgo</p>
-          </div>
-          <br>
-          <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+            <h4 class="title"><a href="">Strategic</a></h4>
+            <p class="description">thinking, proactive, initiative, leadership</p>
+        </div>
+        <br>
+        <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-binoculars"></i></div>
-            <h4 class="title"><a href="">Creativo</a></h4>
-            <p class="description">resolutivo y dispuesto.</p>
-          </div>
-          <br>
-          <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+            <h4 class="title"><a href="">Creative</a></h4>
+            <p class="description">resourceful and willing.</p>
+        </div>
+        <br>
+        <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">Capacidad</a></h4>
-            <p class="description">de análisis, adaptación y comunicaión eficaz</p>
-          </div>
-          <br>
-          <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+            <h4 class="title"><a href="">Analytical</a></h4>
+            <p class="description">abilities, adaptation, and effective communication</p>
+        </div>
+        <br>
+        <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Dispuesto</a></h4>
-            <p class="description">a aprender nuevas tecnologías y afrontar nuevos retos.</p>
-          </div>
-          <br>
-          <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+            <h4 class="title"><a href="">Willing</a></h4>
+            <p class="description">to learn new technologies and face new challenges.</p>
+        </div>
+        <br>
+        <div class="col-lg-3 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-            <h4 class="title"><a href="">Habilidades</a></h4>
-            <p class="description">organizativas, sentido del tiempo y la urgencia</p>
-          </div>
+            <h4 class="title"><a href="">organizational</a></h4>
+            <p class="description">skills, sense of time, and urgency</p>
+        </div>
+        
         </div>
 
       </div>
@@ -167,7 +168,46 @@
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
 
-            <h3 class="resume-title">Experiencia laboral</h3>
+            <h3 class="resume-title">Job experience</h3>
+
+            <div class="resume-item">
+              <h4>Cybersecurity analyst</h4> 
+                <h5><em>Cellnex Telecom - Madrid</em></h5> 
+                <u><p>November 2023 - Now</p></u>
+                <p>Cybersecurity Analyst in the global CSIRT</p>
+                 <br>
+                 <ul>
+                  <li><p class="description">Security monitoring & Security incident handling</p></li>
+                  <li><p class="description">Threat hunting, threat intelligence</p></li>
+                  <li><p class="description">Social engineering attacks investigation</p></li>
+                  <li><p class="description">Reporting, data visualization, documentation</p></li>
+                  <li><p class="description">Vulnerability management</p></li>
+                  <li><p class="description">Scripting</p></li>               
+                 </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>Cybersecurity analyst</h4> 
+                <h5><em>Analistas Financieros Internacionales AFI - Madrid</em></h5> 
+                <u><p>April 2021 - November 2023</p></u>
+                <p>Analista Programador Junior Full Stack en el departamento de Servicios Tecnológicos Avanzados.</p>
+                 <br>
+                 <ul>
+                  <li><p class="description">Threat detection and response. Proposal and development of efficient security measures.</p></li>
+                  <li><p class="description">Test, processes, CI/CD automation; Web scrapping (Python, selenium).</p></li>
+                  <li><p class="description">Reporting and data visualization (Word, Excel).</p></li>
+                  <li><p class="description">Direct contact with clients in evaluation and coordination meetings.</p></li>
+                  <li><p class="description">PAM, Privileged Access Management.</p></li>
+                  <li><p class="description">Training, awareness.</p></li>
+                 </ul>
+
+                  <p><b>Technologies:</b></p>
+                  <ul>
+                    <li><p>Scripting: Python, JavaScript.</p></li>
+                    <li><p>Reporting: Word, Excel, PowerPoint.</p></li>
+                  </ul>
+            </div>
+
               <div class="resume-item">
                 <h4>Analista Programador | Desarrollador fullstack</h4> 
                   <h5><em>Analistas Financieros Internacionales AFI - Madrid</em></h5> 
@@ -175,13 +215,10 @@
                   <p>Analista Programador Junior Full Stack en el departamento de Servicios Tecnológicos Avanzados.</p>
                    <br>
                    <ul>
-                     <li><p>Desarrollo y mantenimiento de aplicaciones web utilizando Java 8 con el framework de Spring en BackEnd así como HTML, CSS, JavaScript, jQuery y AJAX para el FrontEnd.</p></li>
-                     <li><p>Administración de bases de Datos SQL con Oracle SQL Developer y MySQL</p></li>
-                     <li><p>Desarrollo y mantenimiento de documentación: Manual de Usuario, Modelo de Datos, Arquitectura del Sistema, plan de pruebas (Microsoft Word y Excel).</p></li>
-                     <li><p>Identificación de errores, gestión y resolución de incidencias.</p></li>
-                     <li><p>Contacto directo con el cliente en reuniones de evaluación y coordinación.</p></li>
-                     <li><p>Automatización de tareas y procesos repetitivos y web scraping con Python. </p></li>
-                   </ul>
+                    <li><p class="description">Development and maintenance of web applications: Java, JavaScript, SQL.</p></li>
+                    <li><p class="description">Client requirements analysis. Proposal and development of solutions.</p></li>
+                    <li><p class="description">Documentation and reports: User manual, data model, system architecture, test plan (Microsoft Word, Excel, PowerPoint).</p></li>
+                  </ul>
 
                     <p><b>Tecnologías usadas:</b></p>
                     <ul>
