--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               <h4>Cybersecurity analyst</h4> 
                 <h5><em>Cellnex Telecom - Madrid</em></h5> 
                 <u><p>November 2023 - Now</p></u>
-                <p>Cybersecurity Analyst in the global CSIRT</p>
+                <p>Cybersecurity Analyst in the global CSIRT - Computer Security Incident Response Team</p>
                  <br>
                  <ul>
                   <li><p class="description">Security monitoring & Security incident handling</p></li>
