--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             <h3 class="resume-title">Certificaciones y cursos</h3>
               <div class="resume-item">
                 <h4>Cambridge C1 Advanced Certificate</h4> 
-                  <h5><em>Escuela oficial de Idiomas. Speaking and listening nota de C2 Proficiency. </em></h5> 
+                  <h5><em>Escuela oficial de Idiomas. Speaking and listening C2 Proficiency. </em></h5> 
                   <u><p>Abril 2021</p></u>
               </div>
               <div class="resume-item">
