--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1 class="nombre">Jorge García-Arcicollar</h1>
     <br>
-     <div class="ima"> <p> I'm a <span class="typed" data-typed-items="cybersecurity analyst, incident responder, social engineering attacks investigator, threat intelligence analyst, security monitoring, digital forensic investigator, IT consultant, web security expert, vulnerability management, software developer"></span></p></div>
+     <div class="ima"> <p> I'm a/an <span class="typed" data-typed-items="cybersecurity analyst, incident responder, social engineering attacks investigator, threat intelligence analyst, security monitoring, digital forensic investigator, IT consultant, web security expert, vulnerability management, software developer"></span></p></div>
     </div>
   </section><!-- End Hero -->
 
@@ -244,6 +244,12 @@
 
             <h3 class="resume-title">Certificaciones y cursos</h3>
               <div class="resume-item">
+                <div class="resume-item">
+                  <h4>Ethical Hacking Essentials | EHE Cerfification</h4> 
+                    <h5><em>EC Council - Codered </em></h5> 
+                    <u><p>Octubre 2022 - Diciembre 2022</p></u>
+                     <p>Ataques y contramedidas ante amenazas de ingeniería social y hacia aplicaciones web, entornos inalámbricos, cloud y dispositivos móviles. </p>
+                </div>
                 <h4>Cambridge C1 Advanced Certificate</h4> 
                   <h5><em>Escuela oficial de Idiomas. Speaking and listening C2 Proficiency. </em></h5> 
                   <u><p>Abril 2021</p></u>
@@ -268,28 +274,28 @@
               <u><p>noviembre 2022 - Junio 2023</p></u>
               <br>
                 <ul>
-                <li><p>Ciberinteligencia.</p>
-                  <ul><li><p class="minip">Análisis de capturas de tráfico de red con Wireshark. </p> </li></ul>
-                  <ul><li><p class="minip">Análisis de Cabeceras de correo. </p></li> </ul>
+                <li><p>Ciberinteligencia</p>
+                  <ul><li><p class="minip">OSINT, WireShark, ingeniería social, CTI </p> </li></ul>
                 </li>
-                 <li><p>System Information Events Manager (SIEM).</p>
-                  <ul><li><p class="minip">Microsoft Azure Sentinel </p> </li></ul>
-                  <ul><li><p class="minip">Qradar </p></li> </ul>
-                  <ul><li><p class="minip">Splunk </p></li> </ul>
+                 <li><p>System Information Events Manager (SIEM)</p>
+                  <ul><li><p class="minip">Azure Sentinel, QRadar, Splunk </p> </li></ul>
                 </li>
-                 <li><p>Desarrollo seguro.</p></li>
-                 <li><p>Hacking ético.</p></li>
-                 <li><p>Seguridad en entornos móviles.</p></li>
-                 <li><p>Análisis Forense digital.</p></li>
-                 <li><p>Ingeniería inversa.</p></li>
+                 <li><p>Desarrollo seguro</p>
+                  <ul><li><p class="minip">DevSecOps, CI/CD, OWASP, SSDLC </p> </li></ul>
+                </li>
+                 <li><p>Hacking ético</p>
+                  <ul><li><p class="minip">Kali linux, nmap, metasploit. </p> </li></ul>
+                </li>
+                 <li><p>Seguridad en entornos móviles</p>
+                  <ul><li><p class="minip">.apk, Frida </p> </li></ul>
+                </li>
+                 <li><p>Análisis Forense digital</p>
+                  <ul><li><p class="minip"> Autopsy, FTK imager, Volatility </p> </li></ul>
+                </li>
+                 <li><p>Ingeniería inversa</p>
+                  <ul><li><p class="minip"> IDA, ghidra, pestudio </p> </li></ul>
+                </li>
                 <ul>
-            </div>
-
-            <div class="resume-item">
-              <h4>Ethical Hacking Essentials | EHE Cerfification</h4> 
-                <h5><em>EC Council - Codered </em></h5> 
-                <u><p>Octubre 2022 - Diciembre 2022</p></u>
-                 <p>Ataques y contramedidas ante amenazas de ingeniería social y hacia aplicaciones web, entornos inalámbricos, cloud y dispositivos móviles. </p>
             </div>
 
             <div class="resume-item">
@@ -324,19 +330,6 @@
                 <p>Estudiante de intercambio durante el bachilleraro en Chicago, EEUU</p>
               </div>   
 <br>
-              <h3 class="resume-title">Voluntariado</h3>
-              <div class="resume-item">
-                <h4>Desarrollador web</h4> 
-                  <h5><em>Fundación Afi Emilio Ontiveros </em></h5> 
-                  <u><p>Verano 2022</p></u>
-                  <p>Voluntario en Tuxtla Gutiérrez (Chiapas, México) durante el verano de 2022 en la empresa Avanza Sólido ayudando en la mejora de rendimiento, accesibilidad, SEO y SEM de su página web. También abordamos temas de ciberseguridad identificando amenazas y estableciendo un plan de seguridad.</p>
-              </div>
-              <div class="resume-item">
-                <h4>Monitor de ocio y tiempo libre</h4> 
-                  <h5><em>Ntra. Sra. del Camino </em></h5> 
-                  <u><p>Verano 2015/2016/2017/2018</p></u>
-                  <p>Monitor voluntario en campamentos de verano.</p>
-              </div>
           </div> 
           </div>
           
@@ -455,7 +448,7 @@
       </div>
     </section><!-- End Facts Section -->
 
-
+<!----
      ======= Portfolio Section ======= 
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
@@ -616,15 +609,15 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section> End Services Section  -->
 
-     ======= Testimonials Section ======= 
+
     <section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
         <div class="section-title">
-          <h2>Testimonials</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Volunteer experience</h2>
+          <p>“We make a living by what we get. We make a life by what we give.” - Winston Churchill  </p>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -632,14 +625,12 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                <p>                  
+                  Voluntario en Tuxtla Gutiérrez (Chiapas, México) durante el verano de 2022 en la empresa Avanza Sólido ayudando en la mejora de rendimiento, accesibilidad y SEO de su página web. Definición de una estrategia de ciberseguridad contra la ingeniería social.                 
                 </p>
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <img src="_assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <h3 class="blanco">Fundación Afi Emilio Ontiveros</h3>
+                <h4>Entidades microfinancieras de México</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -650,7 +641,7 @@
                   Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                <img src="_assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                 <h3>Sara Wilsson</h3>
                 <h4>Designer</h4>
               </div>
@@ -663,7 +654,7 @@
                   Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+                <img src="_assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                 <h3>Jena Karlis</h3>
                 <h4>Store Owner</h4>
               </div>
@@ -676,7 +667,7 @@
                   Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+                <img src="_assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                 <h3>Matt Brandon</h3>
                 <h4>Freelancer</h4>
               </div>
@@ -689,7 +680,7 @@
                   Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                <img src="_assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>John Larson</h3>
                 <h4>Entrepreneur</h4>
               </div>
