--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About me</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>CV</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Certificaciones</span></a></li>    
-          <li><a href="#testiomonials" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Volunteer experience</span></a></li>    
+          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Certifications</span></a></li>    
+          <li><a href="#testimonials" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Volunteer experience</span></a></li>    
           <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Tech stack</span></a></li>  
           <li><a href="#facts" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Spark AR Creator</span></a></li>    
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
@@ -83,8 +83,10 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>About me</h2>
-          <p>Passionate about technology. Having completed a Master's in Cybersecurity from Camilo Jose Cela University x Deloitte x IMF and holding a degree in Bilingual Web Development. I have a keen interest in incident response, threat intelligence, social engineering attacks and Artificial Intelligence </p>
+          <h2>About me</h2> 
+          <p>Passionate about technology</p><br>
+          <p>Having completed a Master's in Cybersecurity from Camilo Jose Cela University x Deloitte x IMF and holding a degree in Bilingual Web Development. I have a keen interest in incident response, threat intelligence, social engineering attacks and Artificial Intelligence </p><br>
+          <p>Currently working as a Cybersecurity analyst specialized in incident response, with a strong command of English and software development. Experience in detecting, containing, and analyzing critical situations in global security environments.</p>
         </div>
 
         <div class="row">
